# simple-todo

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/simpletodo/: __init__.py  gui.py  main.py  model.py  util.py
src/todo/: main.py
